--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "package_writer",
   "private": true,
   "version": "0.1.3",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^3.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -25,6 +28,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "express": "^4.21.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
