--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "version": "0.1.3",
   "scripts": {
     "dev": "vite",
+    "host": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "http-proxy-middleware": "^3.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
@@ -20,6 +23,7 @@
     "react-tabs": "^6.0.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
