--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,22 @@
-FROM node:18-alpine
+FROM node
+
+
 WORKDIR /package_writer
-COPY ../public/ /package_writer/public
-COPY ../src/ /package_writer/src/
-COPY ../package.json /package_writer
+
+# COPY ../public/ /package_writer/public
+# COPY ../src/ /package_writer/src/
+# COPY ../package.json /package_writer
+
+COPY . .
+
+RUN ls
 
 RUN npm install
 
-CMD ["npm", "start"]
+
+RUN npb build
+
+EXPOSE 8080
+
+CMD ["npm", "run", "host"]
+# CMD ["vite", "--host"]
